--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="./images/favicon.ico" sizes="32x32" />
     <link rel="icon" href="./images/icon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="./images/apple-touch-icon.png" />
-
+    <!--styles-->
     <link rel="stylesheet" href="./styles/fonts.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
