--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <h2 class="section__title">Что снижает концентрацию внимания?</h2>
         <div class="section__cards">
           <article class="card">
-            <h3 class="card__title title-decor">Концентрация</h3>
+            <h3 class="card__title title-decor">Многозадачность</h3>
             <p class="card__text">
               Как концентрация может снижаться из-за… концентрации? Любая
               стрессовая ситуация (и резко меняющийся мир в целом) заставляет
