--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
         </h2>
         <div class="section__cards">
-          <p class="section__subtitle title-decor">5 простых (на самом деле не очень) советов</p> 
+          <h3 class="section__subtitle title-decor">5 простых (на самом деле не очень) советов</h3> 
           <article class="card">
-            <h3 class="card__title title-decor card__title--regular">
+            <h4 class="card__title title-decor card__title--regular">
               Представьте небо и облака
-            </h3>
+            </h4>
             <p class="card__text">
               Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
               успокоиться. Ведь часто именно тревожные мысли о сложных задачах
@@ -157,9 +157,9 @@
             </p>
           </article>
           <article class="card">
-            <h3 class="card__title title-decor card__title--regular">
+            <h4 class="card__title title-decor card__title--regular">
               Включите музыку
-            </h3>
+            </h4>
             <p class="card__text">
               Но не любую, и не любимую. Любимая может быть связана с сильными
               положительными эмоциями, которые тоже очень сильно отвлекают.
@@ -168,9 +168,9 @@
             </p>
           </article>
           <article class="card">
-            <h3 class="card__title title-decor card__title--regular">
+            <h4 class="card__title title-decor card__title--regular">
               Прогуляйтесь
-            </h3>
+            </h4>
             <p class="card__text">
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
               <a
@@ -186,9 +186,9 @@
             </p>
           </article>
           <article class="card">
-            <h3 class="card__title title-decor card__title--regular">
+            <h4 class="card__title title-decor card__title--regular">
               Хорошо ешьте
-            </h3>
+            </h4>
             <p class="card__text">
               Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
               которые препятствуют резким скачкам сахара в крови. Например, с
@@ -198,9 +198,9 @@
             </p>
           </article>
           <article class="card">
-            <h3 class="card__title title-decor card__title--regular">
+            <h4 class="card__title title-decor card__title--regular">
               Читайте
-            </h3>
+            </h4>
             <p class="card__text">
               Настоящие бумажные книги. Это правда помогает с концентрацией:
               чтобы прочитать пост в соцсети, достаточно нескольких минут или
