--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Сложно сосредоточиться</title>
 
     <link rel="icon" href="./images/favicon.ico" sizes="32x32" />
-    <link rel="icon" href="./images/icon.svg" type="image/svg+xml" />
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="./images/apple-touch-icon.png" />
     <!--styles-->
     <link rel="stylesheet" href="./fonts/fonts.css" />
